Optimized project by removing redundent code